<resources>
    <string name="app_name">PSU Schedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_open">Open schedule</string>
    <string name="schedule_on_day">Schedule on day</string>
    <string name="general_schedule">General schedule</string>
    <string name="settings">Settings</string>
    <string name="developers">Developers</string>
    <string name="about">About</string>
</resources>
