<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule_on_day"
            android:icon="@drawable/table_column"
            android:title="@string/schedule_on_day"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_general_schedule"
            android:icon="@drawable/table_large"
            android:title="@string/general_schedule"
            android:checkable="true"/>
    </group>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_developers"
                android:icon="@drawable/account_multiple"
                android:title="@string/developers" />
        </menu>
    </item>

</menu>
